# BearingsInfo

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  00_Оглавление.md  AGENT.md  ASSUMPTIONS.md  AUDIT_SUMMARY.md  CATALOG_INDEX.md  CHANGELOG.md  CHANGELOG_DETAILED.md  CLEANUP_REPORT.md  CODEOWNERS  CONTRIBUTING.md  DATA_SOURCES.md  DATA_VALIDATION.md  DOCX_EXTRACTION_REPORT.md  Dockerfile  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY_OLD.md  IMPROVEMENTS_SUMMARY.md  INDEX.md  INTEGRATION_COMPLETE.md  KNOWLEDGE_BASES_COMPARISON.md  KNOWLEDGE_BASE_ENHANCED.md  KNOWLEDGE_BASE_IMPLEMENTATION_REPORT.md  MIGRATION_PLAN.md  Makefile  NEW_STRUCTURE.md  PROMPT_ARTICLE_CREATION.md  PROMPT_ENCYCLOPEDIA_ASSISTANT.md  README.md  README_OLD_BACKUP.md  README_en.md  REPOSITORY_ANALYSIS.md  REPOSITORY_STRUCTURE_AUDIT.md  REPOSITORY_TREE.md  ROADMAP_ENCYCLOPEDIA.md  RULES.md  SOURCES.md  (+37 more)
00_meta/: README.md
00_ВСПОМОГАТЕЛЬНЫЕ/: AUTO_EXTRACT_GUIDE.md  MANIFEST.csv  README.md  extract_archives.sh  instructions.md
01_basics/: README.md
01_Подшипники_Общая_информация/: README.md
02_standards_marking/: 02_03_designation_system.md  02_05_clearance_groups.md  02_07_dimension_series.md  02_09_gost_iso_analogues.md  02_11_additional_sign_analogues.md  02_12_imported_analogues.md  02_13_gost_marking.md  02_15_gost_dimensions.md  02_16_gost_standards_list.md  README.md
02_Стандарты_и_маркировка/: README.md
02_Термины_и_основы/: README.md
03_types_components/: README.md
03_Типы_и_элементы/: README.md
04_ISO_и_международные_обозначения/: Система_обозначений_ISO.md
04_parameters_calculations/: README.md
04_Расчет_и_параметры/: README.md
(+1622 files in other folders)
